TreeWalker: Templatize previousSibling() and nextSibling().

Introduce a template function TraverseSiblings() to unify duplicated code.
NodeTraversalStrategy.h is a helper for the template.

This CL has no behavior changes, and is a preparation to fix crbug.com/731353.

Bug: 731353
Change-Id: Idf4cc5f2a5ed48f4a426fa697fc24c2ace3fcb21
Reviewed-on: https://chromium-review.googlesource.com/527760
Commit-Queue: Kent Tamura <tkent@chromium.org>
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#478224}
Former-commit-id: 17f4b143b3214dac41bd1dbee3946495a0837281